# prive_moi

./: README.md  home.py  main.py  profil.txt  profil_qa.json  profil_structuré.txt  pyproject.toml  requirements.txt  test.py
pages/: app.py  ia.py  test_.py  vie.py
