[project]
name = "portfolio-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.2",
    "langchain>=0.3.26",
    "llama-index>=0.12.48",
    "longchain>=0.4.2",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.46.1",
    "streamlit-option-menu>=0.4.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
